started maven build